Fix contrast of text colour in NAVBAR

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h1 h2 h3 {
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #090c18;
   text-align: center;
   font-weight: 500;
   padding: 24px 24px;
